--- a/main_page.html
+++ b/main_page.html
@@ -4,14 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Оглавление</title>
 </head>
 
 <body>
     <p>
         Всем привет! Это мои рекомендации по играм, книгам и фильмам
     </p>
-
+    <p>
+    <ul>
+        <li><a href="book_page.html">книги</a></li>
+        <li><a href="movie_page.html">фильмы</a></li>
+        <li><a href="game_page.html">игры</a></li>
+    </ul>
+    </p>
 </body>
 
 </html>
