--- a/main_page.html
+++ b/main_page.html
@@ -9,7 +9,7 @@
 
 <body>
     <p>
-        Всем привет! Это мои рекомендации по играм, книгам и фильмам
+    <h1>Всем привет! Это мои рекомендации по играм, книгам и фильмам</h1>
     </p>
     <p>
     <ul>
