--- a/main_page.html
+++ b/main_page.html
@@ -18,6 +18,10 @@
         <li><a href="game_page.html">игры</a></li>
     </ul>
     </p>
+    <hr>
+    <p>
+        Моя почта: polanskijtihon@gmail.com
+    </p>
 </body>
 
 </html>
