--- a/book_page.html
+++ b/book_page.html
@@ -50,7 +50,8 @@
         и создать существо, которое окажется монстром, безобразным, жестоким и безумным.
         Это творчество дорого обойдется создателю — фактически монстр разрушит всю его жизнь...
     </p>
-
+    <hr>
+    <a href="index.html">На главную</a>
 </body>
 
 </html>
