--- a/movie_page.html
+++ b/movie_page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Книги</title>
+    <title>Фильмы</title>
 </head>
 
 <body>
@@ -46,7 +46,8 @@
         пути были всевозможные препятствия. Все они выбирают неочевидные пути достижения своих целей, и мечты
         по-прежнему остаются недостижимыми, а жизни героев рушатся безвозвратно.
     </p>
-
+    <hr>
+    <a href="index.html">На главную</a>
 </body>
 
 </html>
